tests/auto/corelib/ipc/qsharedmemory/tst_qsharedmemory.cpp
@@ -78,6 +78,9 @@ private slots:
     void uniqueKey_data();
     void uniqueKey();
 
+    // legacy
+    void createWithSameKey();
+
 protected:
     void remove(const QNativeIpcKey &key);
 
@@ -898,6 +901,29 @@ void tst_QSharedMemory::uniqueKey()
     QCOMPARE(keyEqual, setEqual);
     QCOMPARE(nativeEqual, setEqual);
 }
+
+QT_WARNING_PUSH
+QT_WARNING_DISABLE_DEPRECATED
+void tst_QSharedMemory::createWithSameKey()
+{
+    const QString key = u"legacy_key"_s;
+    const qsizetype sz = 100;
+    QSharedMemory mem1(key);
+    QVERIFY(mem1.create(sz));
+
+    {
+        QSharedMemory mem2(key);
+        QVERIFY(!mem2.create(sz));
+        QVERIFY(mem2.attach());
+    }
+    // and the second create() should fail as well, QTBUG-111855
+    {
+        QSharedMemory mem2(key);
+        QVERIFY(!mem2.create(sz));
+        QVERIFY(mem2.attach());
+    }
+}
+QT_WARNING_POP
 
 QTEST_MAIN(tst_QSharedMemory)
 #include "tst_qsharedmemory.moc"
